--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,9 +5,11 @@ on:
   push:
     branches:
       - main   # Change this to the branch you want to trigger tests for
+      - work
   pull_request:
     branches:
       - main
+      - work
 
 jobs:
   test:
@@ -20,17 +22,10 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3  # Set up the Node.js environment
       with:
-        node-version: '16'  # Specify the Node.js version to use (adjust as needed)
+        node-version: '18'  # Specify the Node.js version to use (adjust as needed)
 
     - name: Install dependencies
       run: npm install   # Install all dependencies listed in package.json
 
     - name: Run tests
-      run: npm test       # Run the test script defined in your package.json
-
-    - name: Upload test results (optional)
-      if: always()       # This ensures that test results are uploaded even if tests fail
-      uses: actions/upload-artifact@v3
-      with:
-        name: test-results
-        path: path/to/test-reports # Adjust the path to where your test results are stored
+      run: CI=true npm test       # Run the test script defined in your package.json
